resym_core/tests/snapshots/type_reconstruction__type_reconstruction_msvc_access_specifiers-21.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 103
expression: reconstructed_type
---
struct resym_test::BitFieldsTest7 { /* Size=0x8 */
  /* 0x0000 */ public: unsigned short b1 : 3; /* BitPos=0 */
  /* 0x0000 */ unsigned short : 0; /* BitPos=3 */
  /* 0x0004 */ public: unsigned int b2 : 3; /* BitPos=0 */
};
