resym_core/tests/snapshots/type_reconstruction__type_reconstruction_msvc_access_specifiers-23.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 103
expression: reconstructed_type
---
struct resym_test::NtdllRegression1 { /* Size=0xe8 */
  /* 0x0000 */ public: void (* KernelRoutine)(resym_test::_KAPC*, void (**)(void*, void*, void*), void**, void**, void**);
  /* 0x0008 */ public: long (* MajorFunction[28])(resym_test::_DEVICE_OBJECT*, resym_test::_IRP*);
};
