resym_core/tests/snapshots/type_reconstruction__type_reconstruction_msvc_access_specifiers-6.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 103
expression: reconstructed_type
---
enum resym_test::EnumTest1 : int {
  kEnumTest1Val1 = 0x0000,
  kEnumTest1Val2 = 0x0001,
  kEnumTest1Val3 = 0x0002,
};
